Transaction index action implemented
