# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\Auth\AuthenticatedSessionController;
 use App\Http\Controllers\Api\Auth\EmailVerificationController;
 use App\Http\Controllers\Api\Auth\RegisteredUserController;
 use App\Http\Controllers\Api\General\AccountsController;
+use App\Http\Controllers\Api\General\TransactionController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -29,5 +30,6 @@ Route::prefix('/v1')->group(function () {
             return $request->user();
         });
         Route::resource('accounts', AccountsController::class)->except('edit');
+        Route::resource('transactions', TransactionController::class);
     });
 });
